sdks/swift/Sources/CGoudEngine/include/goud_engine.h

/**
 * Opaque identifier for an engine context.
 */
typedef struct GoudContextId {
    uint64_t _0;
} GoudContextId;
/**
 * Frame timing statistics computed from the rolling window.
 */
typedef struct FpsStats {
    /**
     * Current (most recent) FPS.
     */
    float current_fps;
    /**
     * Minimum FPS observed in the rolling window.
     */
    float min_fps;
    /**
     * Maximum FPS observed in the rolling window.
     */
    float max_fps;
    /**
     * Average FPS across the rolling window.
     */
    float avg_fps;
    /**
     * Most recent frame time in milliseconds.
     */
    float frame_time_ms;
} FpsStats;
/**
 * FFI-compatible error code type.
 */
typedef int32_t GoudErrorCode;
/**
 * Opaque texture handle for FFI.
 */
typedef uint64_t GoudTextureHandle;
/**
 * FFI-safe rendering statistics.
 */
typedef struct GoudRenderStats {
    /**
     * Number of draw calls this frame
     */
    uint32_t draw_calls;
    /**
     * Number of triangles rendered
     */
    uint32_t triangles;
    /**
     * Number of texture binds
     */
    uint32_t texture_binds;
    /**
     * Number of shader binds
     */
    uint32_t shader_binds;
} GoudRenderStats;
/**
 * Opaque font handle for native FFI text rendering.
 */
typedef uint64_t GoudFontHandle;
/**
 * FFI-safe result type for returning success/failure status across the FFI boundary.
 */
typedef struct GoudResult {
    /**
     * The error code. `SUCCESS` (0) on success, error code on failure.
     */
    GoudErrorCode code;
    /**
     * True if the operation succeeded, false otherwise.
     */
    bool success;
} GoudResult;
/**
 * Creates a new scene with the given name.
 */
uint32_t goud_scene_create(struct GoudContextId context_id, const uint8_t *name_ptr, uint32_t name_len);
/**
 * Destroys a scene and frees its resources.
 */
GoudResult goud_scene_destroy(struct GoudContextId context_id, uint32_t scene_id);
/**
 * Looks up a scene by name, returning its ID.
 */
uint32_t goud_scene_get_by_name(struct GoudContextId context_id, const uint8_t *name_ptr, uint32_t name_len);
/**
 * Sets whether a scene is active.
 */
GoudResult goud_scene_set_active(struct GoudContextId context_id, uint32_t scene_id, bool active);
/**
 * Returns whether a scene is currently active.
 */
bool goud_scene_is_active(struct GoudContextId context_id, uint32_t scene_id);
/**
 * Returns the number of scenes in the context.
 */
uint32_t goud_scene_count(struct GoudContextId context_id);
/**
 * Sets the scene that subsequent entity/component FFI operations target.
 */
GoudResult goud_scene_set_current(struct GoudContextId context_id, uint32_t scene_id);
/**
 * Returns the ID of the scene currently targeted by entity/component
 */
uint32_t goud_scene_get_current(struct GoudContextId context_id);
/**
 * Starts a transition between two scenes.
 */
GoudResult goud_scene_transition_to(struct GoudContextId context_id, uint32_t from_scene, uint32_t to_scene, uint8_t transition_type, float duration_secs);
/**
 * Returns the progress of the active transition.
 */
float goud_scene_transition_progress(struct GoudContextId context_id);
/**
 * Returns whether a scene transition is currently active.
 */
bool goud_scene_transition_is_active(struct GoudContextId context_id);
/**
 * Advances the active transition by `delta_time` seconds.
 */
GoudResult goud_scene_transition_tick(struct GoudContextId context_id, float delta_time);
/* === Assets === */

/**
 * Loads a font from disk and returns an opaque handle.
 */
GoudFontHandle goud_font_load(struct GoudContextId context_id, const char *path);
/**
 * Destroys a loaded font and frees associated GPU atlases.
 */
bool goud_font_destroy(struct GoudContextId context_id, GoudFontHandle font_handle);
/**
 * Loads a texture from an image file.
 */
GoudTextureHandle goud_texture_load(struct GoudContextId context_id, const char *path);
/**
 * Destroys a texture and releases its GPU resources.
 */
bool goud_texture_destroy(struct GoudContextId context_id, GoudTextureHandle texture);
/**
 * Loads a scene from JSON.
 */
uint32_t goud_scene_load(struct GoudContextId context_id, const uint8_t *name_ptr, uint32_t name_len, const uint8_t *json_ptr, uint32_t json_len);
/**
 * Unloads a scene by name.
 */
GoudResult goud_scene_unload(struct GoudContextId context_id, const uint8_t *name_ptr, uint32_t name_len);
/**
 * Draws a textured sprite at the given position.
 */
bool goud_renderer_draw_sprite(struct GoudContextId context_id, GoudTextureHandle texture, float x, float y, float width, float height, float rotation, float r, float g, float b, float a);
/**
 * Draws a textured sprite with a source rectangle for sprite sheet animation.
 */
bool goud_renderer_draw_sprite_rect(struct GoudContextId context_id, GoudTextureHandle texture, float x, float y, float width, float height, float rotation, float src_x, float src_y, float src_w, float src_h, uint32_t src_mode, float r, float g, float b, float a);
/**
 * Draws a colored quad (no texture) at the given position.
 */
bool goud_renderer_draw_quad(struct GoudContextId context_id, float x, float y, float width, float height, float r, float g, float b, float a);
/**
 * Gets rendering statistics for the current frame.
 */
bool goud_renderer_get_stats(struct GoudContextId context_id, struct GoudRenderStats *out_stats);
/**
 * Begins a new rendering frame.
 */
bool goud_renderer_begin(struct GoudContextId context_id);
/**
 * Ends the current rendering frame.
 */
bool goud_renderer_end(struct GoudContextId context_id);
/**
 * Sets the viewport for rendering.
 */
void goud_renderer_set_viewport(struct GoudContextId context_id, int32_t x, int32_t y, uint32_t width, uint32_t height);
/**
 * Enables alpha blending for transparent sprites.
 */
void goud_renderer_enable_blending(struct GoudContextId context_id);
/**
 * Disables alpha blending.
 */
void goud_renderer_disable_blending(struct GoudContextId context_id);
/**
 * Enables depth testing.
 */
void goud_renderer_enable_depth_test(struct GoudContextId context_id);
/**
 * Disables depth testing.
 */
void goud_renderer_disable_depth_test(struct GoudContextId context_id);
/**
 * Clears the depth buffer.
 */
void goud_renderer_clear_depth(struct GoudContextId context_id);
/**
 * Draws UTF-8 text in immediate mode.
 */
bool goud_renderer_draw_text(struct GoudContextId context_id, GoudFontHandle font_handle, const char *text, float x, float y, float font_size, uint8_t alignment, float max_width, float line_spacing, uint8_t direction, float r, float g, float b, float a);
/**
 * Alias export for SDK compatibility.
 */
GOUD_DEPRECATED_MSG("Use goud_renderer_draw_text instead.") bool goud_draw_text(struct GoudContextId context_id, GoudFontHandle font_handle, const char *text, float x, float y, float font_size, uint8_t alignment, float max_width, float line_spacing, uint8_t direction, float r, float g, float b, float a);
/**
 * Sets the 3D camera position.
 */
bool goud_renderer3d_set_camera_position(struct GoudContextId context_id, float x, float y, float z);
/**
 * Sets the 3D camera rotation (pitch, yaw, roll in degrees).
 */
bool goud_renderer3d_set_camera_rotation(struct GoudContextId context_id, float pitch, float yaw, float roll);
/**
 * Configures the ground grid.
 */
bool goud_renderer3d_configure_grid(struct GoudContextId context_id, bool enabled, float size, uint32_t divisions);
/**
 * Sets grid enabled state.
 */
bool goud_renderer3d_set_grid_enabled(struct GoudContextId context_id, bool enabled);
/**
 * Configures the skybox/background color.
 */
bool goud_renderer3d_configure_skybox(struct GoudContextId context_id, bool enabled, float r, float g, float b, float a);
/**
 * Configures fog settings.
 */
bool goud_renderer3d_configure_fog(struct GoudContextId context_id, bool enabled, float r, float g, float b, float density);
/**
 * Sets fog enabled state.
 */
bool goud_renderer3d_set_fog_enabled(struct GoudContextId context_id, bool enabled);
/**
 * Renders all 3D objects in the scene.
 */
bool goud_renderer3d_render(struct GoudContextId context_id);
/**
 * Renders all 3D objects (alias for goud_renderer3d_render).
 */
bool goud_renderer3d_render_all(struct GoudContextId context_id);
/**
 * Adds a light to the scene.
 */
uint32_t goud_renderer3d_add_light(struct GoudContextId context_id, int32_t light_type, float pos_x, float pos_y, float pos_z, float dir_x, float dir_y, float dir_z, float r, float g, float b, float intensity, float range, float spot_angle);
/**
 * Updates a light's properties.
 */
bool goud_renderer3d_update_light(struct GoudContextId context_id, uint32_t light_id, int32_t light_type, float pos_x, float pos_y, float pos_z, float dir_x, float dir_y, float dir_z, float r, float g, float b, float intensity, float range, float spot_angle);
/**
 * Removes a light from the scene.
 */
bool goud_renderer3d_remove_light(struct GoudContextId context_id, uint32_t light_id);
/**
 * Creates a 3D cube object.
 */
uint32_t goud_renderer3d_create_cube(struct GoudContextId context_id, uint32_t texture_id, float width, float height, float depth);
/**
 * Creates a 3D plane object.
 */
uint32_t goud_renderer3d_create_plane(struct GoudContextId context_id, uint32_t texture_id, float width, float depth);
/**
 * Creates a 3D sphere object.
 */
uint32_t goud_renderer3d_create_sphere(struct GoudContextId context_id, uint32_t texture_id, float diameter, uint32_t segments);
/**
 * Creates a 3D cylinder object.
 */
uint32_t goud_renderer3d_create_cylinder(struct GoudContextId context_id, uint32_t texture_id, float radius, float height, uint32_t segments);
/**
 * Sets the position of a 3D object.
 */
bool goud_renderer3d_set_object_position(struct GoudContextId context_id, uint32_t object_id, float x, float y, float z);
/**
 * Sets the rotation of a 3D object (in degrees).
 */
bool goud_renderer3d_set_object_rotation(struct GoudContextId context_id, uint32_t object_id, float x, float y, float z);
/**
 * Sets the scale of a 3D object.
 */
bool goud_renderer3d_set_object_scale(struct GoudContextId context_id, uint32_t object_id, float x, float y, float z);
/**
 * Destroys a 3D object.
 */
bool goud_renderer3d_destroy_object(struct GoudContextId context_id, uint32_t object_id);
/* === Window === */

/**
 * Creates a new windowed context with the default native runtime.
 */
struct GoudContextId goud_window_create(uint32_t width, uint32_t height, const char *title);
/**
 * Destroys a windowed context and releases all resources.
 */
bool goud_window_destroy(struct GoudContextId context_id);
/**
 * Checks if the window should close.
 */
bool goud_window_should_close(struct GoudContextId context_id);
/**
 * Polls window events and updates input state.
 */
float goud_window_poll_events(struct GoudContextId context_id);
/**
 * Swaps the front and back buffers, presenting the rendered frame.
 */
void goud_window_swap_buffers(struct GoudContextId context_id);
/**
 * Gets the window size.
 */
bool goud_window_get_size(struct GoudContextId context_id, uint32_t *out_width, uint32_t *out_height);
/**
 * Sets whether the window should close.
 */
void goud_window_set_should_close(struct GoudContextId context_id, bool should_close);
/**
 * Gets the delta time from the last frame.
 */
float goud_window_get_delta_time(struct GoudContextId context_id);
/**
 * Clears the window with the specified color.
 */
void goud_window_clear(struct GoudContextId context_id, float r, float g, float b, float a);
/**
 * Retrieves the current FPS statistics from the debug overlay.
 */
int32_t goud_debug_get_fps_stats(struct GoudContextId context_id, struct FpsStats *out_stats);
/**
 * Enables or disables the FPS overlay.
 */
int32_t goud_debug_set_fps_overlay_enabled(struct GoudContextId context_id, bool enabled);
/**
 * Sets the FPS stats update interval in seconds.
 */
int32_t goud_debug_set_fps_update_interval(struct GoudContextId context_id, float interval);
/**
 * Sets the screen corner where the FPS overlay is displayed.
 */
int32_t goud_debug_set_fps_overlay_corner(struct GoudContextId context_id, int32_t corner);