sdks/python/goud_engine/generated/_ffi.py


    # scene
    _lib.goud_scene_create.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint8), ctypes.c_uint32]
    _lib.goud_scene_create.restype = ctypes.c_uint32
    _lib.goud_scene_destroy.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_scene_destroy.restype = GoudResult
    _lib.goud_scene_get_by_name.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint8), ctypes.c_uint32]
    _lib.goud_scene_get_by_name.restype = ctypes.c_uint32
    _lib.goud_scene_load.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint8), ctypes.c_uint32, ctypes.POINTER(ctypes.c_uint8), ctypes.c_uint32]
    _lib.goud_scene_load.restype = ctypes.c_uint32
    _lib.goud_scene_unload.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint8), ctypes.c_uint32]
    _lib.goud_scene_unload.restype = GoudResult
    _lib.goud_scene_set_active.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_bool]
    _lib.goud_scene_set_active.restype = GoudResult
    _lib.goud_scene_is_active.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_scene_is_active.restype = ctypes.c_bool
    _lib.goud_scene_count.argtypes = [GoudContextId]
    _lib.goud_scene_count.restype = ctypes.c_uint32
    _lib.goud_scene_set_current.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_scene_set_current.restype = GoudResult
    _lib.goud_scene_get_current.argtypes = [GoudContextId]
    _lib.goud_scene_get_current.restype = ctypes.c_uint32
    _lib.goud_scene_transition_to.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_uint32, ctypes.c_uint8, ctypes.c_float]
    _lib.goud_scene_transition_to.restype = GoudResult
    _lib.goud_scene_transition_progress.argtypes = [GoudContextId]
    _lib.goud_scene_transition_progress.restype = ctypes.c_float
    _lib.goud_scene_transition_is_active.argtypes = [GoudContextId]
    _lib.goud_scene_transition_is_active.restype = ctypes.c_bool
    _lib.goud_scene_transition_tick.argtypes = [GoudContextId, ctypes.c_float]
    _lib.goud_scene_transition_tick.restype = GoudResult

    # window
    _lib.goud_window_create.argtypes = [ctypes.c_uint32, ctypes.c_uint32, ctypes.c_char_p]
    _lib.goud_window_create.restype = GoudContextId
    _lib.goud_window_destroy.argtypes = [GoudContextId]
    _lib.goud_window_destroy.restype = ctypes.c_bool
    _lib.goud_window_should_close.argtypes = [GoudContextId]
    _lib.goud_window_should_close.restype = ctypes.c_bool
    _lib.goud_window_set_should_close.argtypes = [GoudContextId, ctypes.c_bool]
    _lib.goud_window_set_should_close.restype = None
    _lib.goud_window_poll_events.argtypes = [GoudContextId]
    _lib.goud_window_poll_events.restype = ctypes.c_float
    _lib.goud_window_swap_buffers.argtypes = [GoudContextId]
    _lib.goud_window_swap_buffers.restype = None
    _lib.goud_window_clear.argtypes = [GoudContextId, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_window_clear.restype = None
    _lib.goud_window_get_delta_time.argtypes = [GoudContextId]
    _lib.goud_window_get_delta_time.restype = ctypes.c_float
    _lib.goud_window_get_size.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint32), ctypes.POINTER(ctypes.c_uint32)]
    _lib.goud_window_get_size.restype = ctypes.c_bool

    # renderer
    _lib.goud_renderer_begin.argtypes = [GoudContextId]
    _lib.goud_renderer_begin.restype = ctypes.c_bool
    _lib.goud_renderer_end.argtypes = [GoudContextId]
    _lib.goud_renderer_end.restype = ctypes.c_bool
    _lib.goud_renderer_enable_blending.argtypes = [GoudContextId]
    _lib.goud_renderer_enable_blending.restype = None
    _lib.goud_renderer_draw_sprite.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer_draw_sprite.restype = ctypes.c_bool
    _lib.goud_renderer_draw_quad.argtypes = [GoudContextId, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer_draw_quad.restype = ctypes.c_bool
    _lib.goud_texture_load.argtypes = [GoudContextId, ctypes.c_char_p]
    _lib.goud_texture_load.restype = ctypes.c_uint64
    _lib.goud_texture_destroy.argtypes = [GoudContextId, ctypes.c_uint64]
    _lib.goud_texture_destroy.restype = ctypes.c_bool
    _lib.goud_font_load.argtypes = [GoudContextId, ctypes.c_char_p]
    _lib.goud_font_load.restype = ctypes.c_uint64
    _lib.goud_font_destroy.argtypes = [GoudContextId, ctypes.c_uint64]
    _lib.goud_font_destroy.restype = ctypes.c_bool
    _lib.goud_renderer_draw_text.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_char_p, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_uint8, ctypes.c_float, ctypes.c_float, ctypes.c_uint8, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer_draw_text.restype = ctypes.c_bool
    _lib.goud_draw_text.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_char_p, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_uint8, ctypes.c_float, ctypes.c_float, ctypes.c_uint8, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_draw_text.restype = ctypes.c_bool
    _lib.goud_renderer_draw_sprite_rect.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer_draw_sprite_rect.restype = ctypes.c_bool
    _lib.goud_renderer_set_viewport.argtypes = [GoudContextId, ctypes.c_int32, ctypes.c_int32, ctypes.c_uint32, ctypes.c_uint32]
    _lib.goud_renderer_set_viewport.restype = None
    _lib.goud_renderer_enable_depth_test.argtypes = [GoudContextId]
    _lib.goud_renderer_enable_depth_test.restype = None
    _lib.goud_renderer_disable_depth_test.argtypes = [GoudContextId]
    _lib.goud_renderer_disable_depth_test.restype = None
    _lib.goud_renderer_clear_depth.argtypes = [GoudContextId]
    _lib.goud_renderer_clear_depth.restype = None
    _lib.goud_renderer_disable_blending.argtypes = [GoudContextId]
    _lib.goud_renderer_disable_blending.restype = None
    _lib.goud_renderer_get_stats.argtypes = [GoudContextId, ctypes.POINTER(GoudRenderStats)]
    _lib.goud_renderer_get_stats.restype = ctypes.c_bool

    # debug
    _lib.goud_debug_get_fps_stats.argtypes = [GoudContextId, ctypes.POINTER(GoudFpsStats)]
    _lib.goud_debug_get_fps_stats.restype = ctypes.c_int32
    _lib.goud_debug_set_fps_overlay_enabled.argtypes = [GoudContextId, ctypes.c_bool]
    _lib.goud_debug_set_fps_overlay_enabled.restype = ctypes.c_int32
    _lib.goud_debug_set_fps_update_interval.argtypes = [GoudContextId, ctypes.c_float]
    _lib.goud_debug_set_fps_update_interval.restype = ctypes.c_int32
    _lib.goud_debug_set_fps_overlay_corner.argtypes = [GoudContextId, ctypes.c_int32]
    _lib.goud_debug_set_fps_overlay_corner.restype = ctypes.c_int32

    # renderer_3d
    _lib.goud_renderer3d_create_cube.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_create_cube.restype = ctypes.c_uint32
    _lib.goud_renderer3d_create_plane.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_create_plane.restype = ctypes.c_uint32
    _lib.goud_renderer3d_create_sphere.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_float, ctypes.c_uint32]
    _lib.goud_renderer3d_create_sphere.restype = ctypes.c_uint32
    _lib.goud_renderer3d_create_cylinder.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_float, ctypes.c_float, ctypes.c_uint32]
    _lib.goud_renderer3d_create_cylinder.restype = ctypes.c_uint32
    _lib.goud_renderer3d_set_object_position.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_set_object_position.restype = ctypes.c_bool
    _lib.goud_renderer3d_set_object_rotation.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_set_object_rotation.restype = ctypes.c_bool
    _lib.goud_renderer3d_set_object_scale.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_set_object_scale.restype = ctypes.c_bool
    _lib.goud_renderer3d_destroy_object.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_renderer3d_destroy_object.restype = ctypes.c_bool
    _lib.goud_renderer3d_add_light.argtypes = [GoudContextId, ctypes.c_int32, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_add_light.restype = ctypes.c_uint32
    _lib.goud_renderer3d_update_light.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_int32, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_update_light.restype = ctypes.c_bool
    _lib.goud_renderer3d_remove_light.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_renderer3d_remove_light.restype = ctypes.c_bool
    _lib.goud_renderer3d_set_camera_position.argtypes = [GoudContextId, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_set_camera_position.restype = ctypes.c_bool
    _lib.goud_renderer3d_set_camera_rotation.argtypes = [GoudContextId, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_set_camera_rotation.restype = ctypes.c_bool
    _lib.goud_renderer3d_configure_grid.argtypes = [GoudContextId, ctypes.c_bool, ctypes.c_float, ctypes.c_uint32]
    _lib.goud_renderer3d_configure_grid.restype = ctypes.c_bool
    _lib.goud_renderer3d_set_grid_enabled.argtypes = [GoudContextId, ctypes.c_bool]
    _lib.goud_renderer3d_set_grid_enabled.restype = ctypes.c_bool
    _lib.goud_renderer3d_configure_skybox.argtypes = [GoudContextId, ctypes.c_bool, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_configure_skybox.restype = ctypes.c_bool
    _lib.goud_renderer3d_configure_fog.argtypes = [GoudContextId, ctypes.c_bool, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_configure_fog.restype = ctypes.c_bool
    _lib.goud_renderer3d_set_fog_enabled.argtypes = [GoudContextId, ctypes.c_bool]
    _lib.goud_renderer3d_set_fog_enabled.restype = ctypes.c_bool
    _lib.goud_renderer3d_render.argtypes = [GoudContextId]
    _lib.goud_renderer3d_render.restype = ctypes.c_bool
    _lib.goud_renderer3d_render_all.argtypes = [GoudContextId]
    _lib.goud_renderer3d_render_all.restype = ctypes.c_bool
